con output incluido

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,4 +8,4 @@
 
 <hr>
 
-<app-hijo [nombreHijo]="nombre"></app-hijo>
+<app-hijo [nombreHijo]="nombre" (cambioNombreHijo)="nombre=$event"></app-hijo>
