completo con input y output

--- a/src/app/components/hijo/hijo.component.html
+++ b/src/app/components/hijo/hijo.component.html
@@ -2,4 +2,4 @@
 
 <h4>{{nombreHijo}}</h4>
 
-<button class="btn btn-info" (click)="cambiarNombreH()">Cambiar nombre de nuevo</button>
+<button class="btn btn-info" (click)="cambiarNombre()">Cambiar nombre de nuevo</button>
